tests/lean/t12.lean.expected.out
fun (f : N -> N -> N) (g : N -> N -> N) (x : N) (y : N), (f x (g x y)) : (N -> N -> N) -> (N -> N -> N) -> N -> N -> N
t12.lean:7:7: error: invalid expression
